# CMake-Template-dev

./: .gitignore  CMakeLists.txt  README.md  factorial.cpp  main.cpp  run.sh
Factorial/: CMakeLists.txt  factorial.cpp
